Lots of lovely tmux configuring

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,16 @@
+# act like GNU screen
+unbind C-b
+set -g prefix C-a
+
+# Don't futz with my window names dammit
+setw -g automatic-rename off
+
+# Start numbering windows at 1
+set -g base-index 1
+
+# Don't fuck with the escape key
+set -s escape-time 0
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -6,10 +19,36 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+unbind .
+bind / split-window -v
+bind . split-window -h
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
+# Resize panes
+bind < resize-pane -L 1
+bind > resize-pane -R 1
+bind = resize-pane -U 1
+bind - resize-pane -D 1
+
+# Flick between windows
+bind C-a last-window
+
+set -g repeat-time 500
+
+# Reload config
+bind r source-file ~/.tmux.conf
 
 # look good
 set -g default-terminal "screen-256color"
+
+# Pass through key modifiers to term
+setw -g xterm-keys on
+
+# Set status bar
+set -g status-bg white
+set -g status-fg black
+set -g status-left '#[fg=blue]#[bg=black][#S] '
+set -g status-right '#[fg=blue][#H] %H:%M %d-%b-%y'
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg blue
+
