More scrollback in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set -g prefix C-a
 # Don't futz with my window names dammit
 setw -g automatic-rename off
 
+# More scrollback
+set -g history-limit 5000
+
 # Start numbering windows at 1
 set -g base-index 1
 
