Fix workspace script with DB

--- a/bin/workspace
+++ b/bin/workspace
@@ -4,16 +4,16 @@ set -e
 
 function load_dev_database()
 {
-  rdbms=$1
-  project=$2
-  database="${project}_development"
+  local rdbms=$1
+  local project=$2
+  local database="${project}_development"
 
   case "$rdbms" in
     pg)
-      psql -d $database
+      echo "psql -d $database"
       ;;
     mysql)
-      mysql -u root -D $database
+      echo "mysql -u root -D $database"
       ;;
     *)
       echo "Usage: $0 {pg|mysql} <project_name>"
@@ -42,7 +42,7 @@ tmux select-window -t ${session_name}:1
 if [ -n "$rdbms" ]; then
   tmux new-window -t ${session_name}:4 -n 'db'
   tmux swap-window -s ${session_name}:4 -t ${session_name}:1
-  tmux send-keys -t ${session_name}:1 "load_dev_database ${rdbms} ${project}" C-m
+  tmux send-keys -t ${session_name}:1 "$(load_dev_database $rdbms $project)" C-m
   tmux swap-window -s ${session_name}:4 -t ${session_name}:2
   tmux swap-window -s ${session_name}:4 -t ${session_name}:3
   tmux select-window -t ${session_name}:2
