Improve tmux workspace script

--- a/bin/workspace
+++ b/bin/workspace
@@ -21,6 +21,30 @@ function load_dev_database()
   esac
 }
 
+function create_session()
+{
+  local project=$1
+  local session_name=$2
+  local directory=$3
+  local rdbms=$4
+
+  tmux new-session -d -s $session_name
+  tmux set-option -t $session_name default-path $directory
+
+  tmux rename-window -t ${session_name}:1 'vim'
+  tmux send-keys -t ${session_name}:1 'vim .' C-m
+  tmux new-window -t ${session_name}:2 -n 'bash'
+  tmux new-window -t ${session_name}:3 -n 'bash'
+  if [ -n "$rdbms" ]; then
+    tmux new-window -t ${session_name}:4 -n 'db'
+    tmux send-keys -t ${session_name}:4 "$(load_dev_database $rdbms $project)" C-m
+  fi
+
+  tmux select-window -t ${session_name}:1
+
+  tmux attach -t ${session_name}
+}
+
 project=$1
 session_name=$2
 rdbms=$3
@@ -29,25 +53,7 @@ original_pwd=`pwd -P`
 
 cd $directory
 
-tmux new-session -d -s $session_name
-tmux set-option -t $session_name default-path $directory
-
-tmux rename-window -t ${session_name}:1 'edit'
-tmux send-keys -t ${session_name}:1 'vim .' C-m
-tmux new-window -t ${session_name}:2 -n 'bash'
-tmux new-window -t ${session_name}:3 -n 'bash'
-tmux split-window -t ${session_name}:2 -h
-tmux select-window -t ${session_name}:1
-
-if [ -n "$rdbms" ]; then
-  tmux new-window -t ${session_name}:4 -n 'db'
-  tmux swap-window -s ${session_name}:4 -t ${session_name}:1
-  tmux send-keys -t ${session_name}:1 "$(load_dev_database $rdbms $project)" C-m
-  tmux swap-window -s ${session_name}:4 -t ${session_name}:2
-  tmux swap-window -s ${session_name}:4 -t ${session_name}:3
-  tmux select-window -t ${session_name}:2
-fi
+create_session $project $session_name $directory $rdbms
 
 cd $original_pwd
 
-tmux attach -t ${session_name}
