--- a/tmux.conf
+++ b/tmux.conf
@@ -50,11 +50,16 @@ set -g default-terminal "screen-256color"
 setw -g xterm-keys on
 
 # Set status bar
-set -g status-bg white
-set -g status-fg black
-set -g status-left '#[fg=blue]#[bg=black][#S] '
-set -g status-right '#[fg=blue][#H] %H:%M %d-%b-%y'
+set -g status-bg black
+set -g status-fg white
+set -g status on
+set -g status-interval 2
+set -g status-utf8 on
+set -g status-left-length 60
+set -g status-right-length 60
+
+set -g status-left '#H #[fg=blue]#[bg=black][#S:#I] '
+set -g status-right '#[fg=blue] %H:%M %d-%b-%y'
 
 setw -g window-status-current-fg white
 setw -g window-status-current-bg blue
-
