No host domain in tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -58,7 +58,7 @@ set -g status-utf8 on
 set -g status-left-length 60
 set -g status-right-length 60
 
-set -g status-left '#H #[fg=blue]#[bg=black][#S:#I] '
+set -g status-left '#h #[fg=blue]#[bg=black][#S:#I] '
 set -g status-right '#[fg=blue] %H:%M %d-%b-%y'
 
 setw -g window-status-current-fg white
