Tmux automatically sets term title

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,10 @@ set -g base-index 1
 # Don't fuck with the escape key
 set -s escape-time 0
 
+# Set terminal titles
+set -g set-titles on
+set -g set-titles-string "#S"
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
