Stop things renaming my tmux windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@ set -g prefix C-a
 
 # Don't futz with my window names dammit
 setw -g automatic-rename off
+setw -g allow-rename off
 
 # More scrollback
 set -g history-limit 5000
