Conditional for tmux OSX-only config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Load OSX-specific conf on Darwin systems
-source ~/.tmux-osx.conf
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux-osx.conf"
 
 # act like GNU screen
 unbind C-b
