--- a/bin/workspace
+++ b/bin/workspace
@@ -44,7 +44,7 @@ function create_session()
   tmux new-session -d -s $session_name -c $directory
 
   tmux rename-window -t ${session_name}:1 'vim'
-  tmux send-keys -t ${session_name}:1 'vim .' C-m
+  tmux send-keys -t ${session_name}:1 'vim' C-m
   tmux new-window -t ${session_name}:2 -n 'bash'
   tmux new-window -t ${session_name}:3 -n 'bash'
   if [ -n "$rdbms" ]; then
