Tmux shortcut for inner screen winders

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,8 @@ bind - resize-pane -D 1
 # Flick between windows
 bind C-a last-window
 
+bind a send-keys ^a
+
 set -g repeat-time 500
 
 # Reload config
