--- a/tmux.conf
+++ b/tmux.conf
@@ -24,28 +24,41 @@ set -g set-titles-string "#S"
 
 # act like vim
 setw -g mode-keys vi
+unbind Up
+unbind Down
+unbind Left
+unbind Right
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 unbind .
 bind / split-window -v
 bind . split-window -h
 
 # Resize panes
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind = resize-pane -U 1
-bind - resize-pane -D 1
+unbind M-Up
+unbind M-Down
+unbind M-Left
+unbind M-Right
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
+bind -r < resize-pane -L 1
+bind -r > resize-pane -R 1
+bind -r = resize-pane -U 1
+bind -r - resize-pane -D 1
 
 # Flick between windows
 bind C-a last-window
 
-bind a send-keys ^a
+bind a send-prefix
 
-set -g repeat-time 500
+# Don't repeat cos it causes ghastly delays after window switching
+set -g repeat-time 0
 
 # Reload config
 bind r source-file ~/.tmux.conf
@@ -61,7 +74,6 @@ set -g status-bg black
 set -g status-fg white
 set -g status on
 set -g status-interval 2
-set -g status-utf8 on
 set -g status-left-length 60
 set -g status-right-length 60
 
