--- a/tmux.conf
+++ b/tmux.conf
@@ -80,5 +80,4 @@ set -g status-right-length 60
 set -g status-left '#h #[fg=blue]#[bg=black][#S:#I] '
 set -g status-right '#[fg=blue] %H:%M %d-%b-%y'
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg blue
+setw -g window-status-current-style "fg=white,bg=blue"
