--- a/bin/workspace
+++ b/bin/workspace
@@ -70,7 +70,7 @@ shift $((OPTIND -1))
 
 dirname=${1:-''}
 
-if [[ ! -n "$dirname" ]]; then
+if [[ -z "$dirname" ]]; then
   usage
   exit 1
 fi
@@ -88,7 +88,7 @@ if [[ -n "$*" ]]; then
   exit 1
 fi
 
-if [[ ! -n "$session_name" ]]; then
+if [[ -z "$session_name" ]]; then
   last_dir=$(basename "${directory}")
   session_name=${last_dir//\./_}
 fi
