--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -13,5 +13,6 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "window.zoomLevel": 2
+  "window.zoomLevel": 1,
+  "terminal.integrated.fontSize": 14
 }
